expanding python interpreter support

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 envlist=
-    py{27,34,35}
+    py{27,34,35,36,37}
     flake8
+skip_missing_interpreters = True
 
 [flake8]
 max-line-length= 100
@@ -17,6 +18,8 @@ basepython =
     py27: python2.7
     py34: python3.4
     py35: python3.5
+    py36: python3.6
+    py37: python3.7
 
 [testenv:flake8]
 basepython=python
