--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist=
-    py{27,34,35,36}
+    py27,py34,py35,py36,pypy,pypy3
     flake8
 
 [flake8]
@@ -18,6 +18,8 @@ basepython =
     py34: python3.4
     py35: python3.5
     py36: python3.6
+    pypy: pypy
+    pypy3: pypy3
 
 [testenv:flake8]
 basepython=python
