--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist=
-    py{27,34,35,36}
-    flake8
+    py{27,34,35,36,py3}
+    lint
 
 [flake8]
 max-line-length= 100
@@ -19,7 +19,7 @@ basepython =
     py35: python3.5
     py36: python3.6
 
-[testenv:flake8]
+[testenv:lint]
 basepython=python
 deps=flake8
 commands=flake8 {toxinidir}/eth_bloom
