--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ matrix:
       env: TOX_ENV=py36
     - python: "3.6"
       env: TOX_ENV=flake8
+    - python: "pypy3"
+      env: TOX_ENV=pypy3
 cache:
   - pip: true
   - directories:
