--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
   pypy3-core:
     <<: *common
     docker:
-      - image: pypy
+      - image: pypy:3-slim
         environment:
           TOXENV: pypy3
 workflows:
