--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ matrix:
       env: TOX_ENV=py35
     - python: "3.6"
       env: TOX_ENV=py36
+    - python: "pypy3"
+      env: TOX_ENV=pypy3
     - python: "3.6"
-      env: TOX_ENV=flake8
+      env: TOX_ENV=lint
 cache:
   - pip: true
   - directories:
