--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ commands=
     py.test {posargs:tests}
 deps =
     -r{toxinidir}/requirements-dev.txt
+    eth-hash[pycryptodome]
 basepython =
     py27: python2.7
     py34: python3.4
