run flake8 on tests, install with requirements-dev

--- a/tox.ini
+++ b/tox.ini
@@ -23,4 +23,4 @@ basepython =
 [testenv:lint]
 basepython=python
 deps=flake8
-commands=flake8 {toxinidir}/eth_bloom
+commands=flake8 {toxinidir}/eth_bloom {toxinidir}/tests
