Add Type Hinting to eth_bloom

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,9 @@ envlist=
 [flake8]
 max-line-length= 100
 exclude= tests/*
+commands=
+	mypy --follow-imports=silent --warn-unused-ignores --ignore-missing-imports --no-strict-optional --check-untyped-defs --disallow-incomplete-defs --disallow-untyped-defs --disallow-any-generics -p eth_bloom`
+
 
 [testenv]
 usedevelop=True
