Add Type Hinting to eth_bloom

--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,7 @@ envlist=
 max-line-length= 100
 exclude= tests/*
 commands=
-	mypy --follow-imports=silent --warn-unused-ignores --ignore-missing-imports --no-strict-optional --check-untyped-defs --disallow-incomplete-defs --disallow-untyped-defs --disallow-any-generics -p eth_bloom`
-
+	mypy --strict --follow-imports=silent --ignore-missing-imports -p eth_bloom
 
 [testenv]
 usedevelop=True
