--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist=
-    py{35,36,py3}
+    py{35,36,37,py3}
     lint
 
 [flake8]
@@ -17,6 +17,7 @@ deps =
 basepython =
     py35: python3.5
     py36: python3.6
+    py37: python3.7
     pypy3: pypy3
 
 [testenv:lint]
