--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,12 @@ jobs:
       - image: circleci/python:3.6
         environment:
           TOXENV: py36
+  py37-core:
+    <<: *common
+    docker:
+    - image: circleci/python:3.7
+      environment:
+        TOXENV: py37
   pypy3-core:
     <<: *common
     docker:
@@ -62,4 +68,5 @@ workflows:
       - py34-core
       - py35-core
       - py36-core
+      - py37-core
       - pypy3-core
