--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,19 @@ matrix:
       env: TOX_ENV=py35
     - python: "3.6"
       env: TOX_ENV=py36
+    - python: "3.7"
+      env: TOX_ENV=py37
+      dist: xenial
+      sudo: true
     - python: "pypy3.5"
       env: TOX_ENV=pypy3
     - python: "3.6"
       env: TOX_ENV=lint
+    - python: "3.7"
+      env: TOX_ENV=lint
+      dist: xenial
+      sudo: true
+
 cache:
   - pip: true
   - directories:
