--- a/tox.ini
+++ b/tox.ini
@@ -21,5 +21,5 @@ basepython =
 
 [testenv:lint]
 basepython=python
-deps=flake8
+extras=lint
 commands=flake8 {toxinidir}/eth_bloom {toxinidir}/tests
