Add extras to [testenv]

--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,9 @@ exclude= tests/*
 usedevelop=True
 commands=
     py.test {posargs:tests}
+extras=
+    test
 deps =
-    -r{toxinidir}/requirements-dev.txt
     eth-hash[pycryptodome]
 basepython =
     py35: python3.5
