Add type hints (#25)
Related to #21

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,8 @@ envlist=
 [flake8]
 max-line-length= 100
 exclude= tests/*
+commands=
+	mypy --strict --follow-imports=silent --ignore-missing-imports -p eth_bloom
 
 [testenv]
 usedevelop=True
