enable type checking in CI

--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,6 @@ envlist=
 [flake8]
 max-line-length= 100
 exclude= tests/*
-commands=
-	mypy --strict --follow-imports=silent --ignore-missing-imports -p eth_bloom
 
 [testenv]
 usedevelop=True
@@ -26,4 +24,6 @@ basepython =
 [testenv:lint]
 basepython=python
 extras=lint
-commands=flake8 {toxinidir}/eth_bloom {toxinidir}/tests
+commands=
+    flake8 {toxinidir}/eth_bloom {toxinidir}/tests
+    mypy --strict --follow-imports=silent --ignore-missing-imports -p eth_bloom
