--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist=
-    py{36,37,py3}
+    py{37,38,39,310,311,py3}
     lint
 
 [flake8]
@@ -10,14 +10,17 @@ exclude= tests/*
 [testenv]
 usedevelop=True
 commands=
-    py.test {posargs:tests}
+    pytest tests
 extras=
     test
 deps =
     eth-hash[pycryptodome]
 basepython =
-    py36: python3.6
     py37: python3.7
+    py38: python3.8
+    py39: python3.9
+    py310: python3.10
+    py311: python3.11
     pypy3: pypy3
 
 [testenv:lint]
