Add ``black`` and run it.

--- a/tox.ini
+++ b/tox.ini
@@ -29,3 +29,4 @@ extras=lint
 commands=
     flake8 {toxinidir}/eth_bloom {toxinidir}/tests
     mypy --strict --follow-imports=silent --ignore-missing-imports -p eth_bloom
+    black {toxinidir}/eth_bloom {toxinidir}/tests {toxinidir}/setup.py --check
