--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,10 @@
 include LICENSE
 include README.md
+include requirements-docs.txt
+
+global-include *.pyi
 
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
+prune .tox
+prune venv*
