--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,16 @@ envlist=
 max-line-length= 100
 exclude= tests/*
 
+[isort]
+combine_as_imports=True
+force_sort_within_sections=True
+include_trailing_comma=True
+known_standard_library=pytest
+known_first_party=eth_bloom
+line_length=21
+multi_line_output=3
+use_parentheses=True
+
 [testenv]
 usedevelop=True
 commands=
@@ -29,4 +39,5 @@ extras=lint
 commands=
     flake8 {toxinidir}/eth_bloom {toxinidir}/tests
     mypy --strict --follow-imports=silent --ignore-missing-imports -p eth_bloom
+    isort --check-only --diff {toxinidir}/eth_bloom {toxinidir}/tests
     black {toxinidir}/eth_bloom {toxinidir}/tests {toxinidir}/setup.py --check
