--- a/tox.ini
+++ b/tox.ini
@@ -46,8 +46,8 @@ commands=
     python -m pip install --upgrade pip
     /bin/rm -rf build dist
     python -m build
-    /bin/bash -c 'python -m pip install --upgrade "$(ls dist/<MODULE_NAME>-*-py3-none-any.whl)" --progress-bar off'
-    python -c "import <MODULE_NAME>"
+    /bin/bash -c 'python -m pip install --upgrade "$(ls dist/eth_bloom-*-py3-none-any.whl)" --progress-bar off'
+    python -c "import eth_bloom"
 skip_install=true
 
 [testenv:py311-wheel-windows]
@@ -60,6 +60,6 @@ commands=
     python -m pip install --upgrade pip
     bash.exe -c "rm -rf build dist"
     python -m build
-    bash.exe -c 'python -m pip install --upgrade "$(ls dist/<MODULE_NAME>-*-py3-none-any.whl)" --progress-bar off'
-    python -c "import <MODULE_NAME>"
+    bash.exe -c 'python -m pip install --upgrade "$(ls dist/eth_bloom-*-py3-none-any.whl)" --progress-bar off'
+    python -c "import eth_bloom"
 skip_install=true
