--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ per-file-ignores=__init__.py:F401
 [testenv]
 usedevelop=True
 commands=
-    core: pytest {posargs:tests/core}
+    core: pytest {posargs:tests}
     docs: make docs
 basepython=
     docs: python
