--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,4 +52,4 @@ repos:
     rev: v0.2.4
     hooks:
     -   id: blocklint
-        exclude: 'docs/Makefile|docs/release_notes.rst|tox.ini'
+        exclude: 'docs/Makefile|docs/release_notes.rst|newsfragments/41.internal.rst'
